docs: começar agora: instalação: improve

--- a/docs/docs/comecar-agora/instalacao.mdx
+++ b/docs/docs/comecar-agora/instalacao.mdx
@@ -9,7 +9,9 @@ import TabItem from '@theme/TabItem';
 
 <Tabs>
 
-<TabItem value="webcomponents" label="Web Components - HTML, Vue.js e Vanilla JS">
+<TabItem value="webcomponents" label="Web Components">
+
+Suporte: HTML (Vue.js suportado mas não testado).
 
 ## Via CDN
 
