docs: improve começar agora

--- a/docs/docs/comecar-agora/instalacao.mdx
+++ b/docs/docs/comecar-agora/instalacao.mdx
@@ -90,7 +90,7 @@ cp node_modules/@copperui/core/dist/copperui/* {ASSETS_PATH}
 
 ## Via NPM
 
-<Tabs>
+<Tabs groupId="pkg">
   <TabItem value="npm">
 
 ```sh
@@ -112,4 +112,4 @@ yarn add @copperui/react
 
 </Tabs>
 
-Siga para o [Uso](./Uso).
+Siga para o [Uso](./uso.mdx).
