--- a/docs/docs/comecar-agora/introducao.mdx
+++ b/docs/docs/comecar-agora/introducao.mdx
@@ -10,7 +10,7 @@ O copperui é baseado na tecnologia de [_Web Components_][webcomponents], suport
 
 ## Começando
 
-Crie um novo projeto em sua plataforma de preferência ou continue em um projeto já existente. Siga para a [Instalação](./instalacao).
+Crie um novo projeto em sua plataforma de preferência ou continue em um projeto já existente. Siga para a [Instalação](./instalacao.mdx).
 
 [dsgov]: https://www.gov.br/ds/home
 [webcomponents]: https://www.webcomponents.org/introduction
